[package]
name = "lmql"
version = "0.1.0"
edition = "2021"

[dependencies]
lmql-macros = { path = "macros" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3"
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper = { version = "1.6", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rustls-pki-types = "1.11"
tokio-rustls = "0.26"
webpki-roots = "0.26"

thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"